# sleepless-agent

./: .env.example  .gitignore  BACKEND_IMPROVEMENTS.md  CLAUDE_CODE_REDESIGN.md  GETTING_STARTED.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  com.sleepless-agent.plist  config.yaml  mkdocs.yml  pyproject.toml  requirements.txt  sleepless-agent.service
deployment/: com.sleepless-agent.plist  sleepless-agent.service
docs/: GETTING_STARTED.md  QUICK_REFERENCE.md  quickstart.md
docs/concepts/: pro-plan-management.md
docs/guides/: slack-setup.md
src/: bot.py  claude_executor.py  config.py  daemon.py  git_manager.py  models.py  results.py  scheduler.py  task_queue.py
src/sleepless_agent/: __init__.py  __main__.py  claude_code_executor.py  cli_main.py  config.py  config.yaml  daemon.py  exceptions.py  logging.py
src/sleepless_agent/core/: __init__.py  auto_generator.py  daemon.py  executor.py  live_status.py  migrate_db.py  models.py  queue.py  refinement_helper.py  scheduler.py  task_queue.py  task_runtime.py  task_utils.py  timeout_manager.py  workspace.py
src/sleepless_agent/execution/: __init__.py  claude_code_executor.py  claude_executor.py
src/sleepless_agent/interfaces/: __init__.py  bot.py  cli.py
src/sleepless_agent/monitoring/: __init__.py  monitor.py  pro_plan_usage.py  report_generator.py
src/sleepless_agent/persistence/: __init__.py  results.py  sqlite.py
src/sleepless_agent/runtime/: __init__.py  daemon.py
src/sleepless_agent/scheduling/: __init__.py  auto_generator.py  scheduler.py  time_utils.py
src/sleepless_agent/storage/: __init__.py  git.py  git_manager.py  results.py  sqlite.py  workspace.py
src/sleepless_agent/tasks/: __init__.py  add_task_type_migration.py  gen_ai.py  gen_backlog.py  gen_code_analyzer.py  gen_pool.py  migrate_db.py  models.py  queue.py  refinement.py  utils.py
src/sleepless_agent/templates/: project_readme.md  task_readme.md
src/sleepless_agent/utils/: __init__.py  (+2 more)
(+17 files in other folders)
